--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@rn-primitives/progress": "~1.2.0",
     "@rn-primitives/slot": "~1.2.0",
     "@rn-primitives/tooltip": "~1.2.0",
+    "@rnmapbox/maps": "^10.1.39",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "^53.0.9",
     "expo-linking": "~7.1.5",
+    "expo-location": "^18.1.6",
     "expo-navigation-bar": "~4.2.4",
     "expo-router": "~5.1.3",
     "expo-splash-screen": "~0.30.8",
