--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,12 +7,17 @@
     "**/Thumbs.db": true,
     "**/.expo": true,
     ".vscode": true,
-    "node_modules": true
+    "node_modules": true,
+    ".gitignore": true,
+    "bun.lock": true,
+    ".env": true
   },
   "hide-files.files": [
     ".vscode",
     "node_modules",
-    ".gitignore"
+    ".gitignore",
+    "bun.lock",
+    ".env"
   ],
   "editor.defaultFormatter": "biomejs.biome",
   "editor.formatOnSave": true,
