--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,8 @@
     "node_modules",
     ".gitignore",
     "bun.lock",
-    ".env"
+    ".env",
+    "metro.config.js"
   ],
   "editor.defaultFormatter": "biomejs.biome",
   "editor.formatOnSave": true,
