--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ferryjoy-client-new",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
     "start": "bun x expo start",
