--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ferryjoy-client-new",
+  "name": "ferryjoy-client",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -33,6 +33,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "^53.0.9",
+    "expo-dev-client": "~5.2.4",
     "expo-linking": "~7.1.5",
     "expo-location": "^18.1.6",
     "expo-navigation-bar": "~4.2.4",
