--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,12 @@
     "node_modules": true,
     ".gitignore": true,
     "bun.lock": true,
-    ".env": true
+    ".env": true,
+    "metro.config.js": true,
+    "tsconfig.json": true,
+    "nativewind-env.d.ts": true,
+    "eas.json": true,
+    "babel.config.js": true
   },
   "hide-files.files": [
     ".vscode",
@@ -18,7 +23,11 @@
     ".gitignore",
     "bun.lock",
     ".env",
-    "metro.config.js"
+    "metro.config.js",
+    "tsconfig.json",
+    "nativewind-env.d.ts",
+    "eas.json",
+    "babel.config.js"
   ],
   "editor.defaultFormatter": "biomejs.biome",
   "editor.formatOnSave": true,
