--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "^53.0.9",
-    "expo-dev-client": "~5.2.4",
     "expo-linking": "~7.1.5",
     "expo-location": "^18.1.6",
     "expo-navigation-bar": "~4.2.4",
@@ -52,14 +51,15 @@
     "react-native-screens": "^4.10.0",
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss": "3.3.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@biomejs/biome": "^2.0.6",
     "@types/react": "~19.0.14",
+    "expo-dev-client": "~5.2.4",
+    "tailwindcss": "3.3.5",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.3"
   },
   "private": true
