--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tanstack/react-query": "^5.81.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "convex": "^1.25.2",
     "expo": "^53.0.9",
     "expo-linking": "~7.1.5",
     "expo-location": "^18.1.6",
