--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "clean": "rm -rf .expo node_modules",
     "postinstall": "bun x tailwindcss -i ./src/global.css -o ./node_modules/.cache/nativewind/global.css",
     "prepare": "bun run postinstall",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "db:push": "drizzle-kit push",
+    "db:drop": "drizzle-kit drop",
+    "db:test": "bun run tsx src/db/test-connection.ts",
     "lint": "biome lint src/",
     "lint:fix": "biome lint --write src/",
     "format": "biome format src/",
@@ -31,9 +37,11 @@
     "@rn-primitives/tooltip": "~1.2.0",
     "@rnmapbox/maps": "^10.1.39",
     "@tanstack/react-query": "^5.81.5",
+    "@turf/turf": "^7.2.0",
+    "@types/pg": "^8.15.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "convex": "^1.25.2",
+    "drizzle-orm": "^0.44.2",
     "expo": "^53.0.9",
     "expo-linking": "~7.1.5",
     "expo-location": "^18.1.6",
@@ -45,6 +53,7 @@
     "lucide-react-native": "^0.511.0",
     "mapbox-gl": "^3.13.0",
     "nativewind": "^4.1.23",
+    "postgres": "^3.4.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
@@ -58,10 +67,13 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@biomejs/biome": "^2.0.6",
+    "@types/node": "^24.0.10",
     "@types/react": "~19.0.14",
+    "drizzle-kit": "^0.31.4",
     "expo-dev-client": "~5.2.4",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
   "private": true
