--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "bun x expo start",
-    "web": "expo start -c --web",
+    "web": "clear && expo start -c --web",
     "android": "expo start -c --android",
     "ios": "expo start -c --ios",
     "clean": "rm -rf .expo node_modules",
@@ -57,6 +57,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-logs": "^5.3.0",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.10.0",
