--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "postgres": "^3.4.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-map-gl": "^8.0.4",
     "react-native": "0.79.5",
     "react-native-logs": "^5.3.0",
     "react-native-reanimated": "~3.17.5",
