--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,5 +52,14 @@
   },
   "[jsonc]": {
     "editor.defaultFormatter": "biomejs.biome"
-  }
+  },
+  "markdown.preview.fontFamily": "Consolas, 'Courier New', monospace",
+  "markdown.preview.codeFontFamily": "Consolas, 'Courier New', monospace",
+  "markdown.preview.fontSize": 14,
+  "markdown.preview.lineHeight": 1.6,
+  "markdown.preview.breaks": true,
+  "markdown.preview.linkify": true,
+  "markdown.preview.scrollPreviewWithEditor": true,
+  "markdown.preview.scrollEditorWithPreview": true,
+  "markdown.preview.css": "./.vscode/markdown-preview.css"
 }
