--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@rn-primitives/slot": "~1.2.0",
     "@rn-primitives/tooltip": "~1.2.0",
     "@rnmapbox/maps": "^10.1.39",
+    "@supabase/supabase-js": "^2.50.3",
     "@tanstack/react-query": "^5.81.5",
     "@turf/turf": "^7.2.0",
     "class-variance-authority": "^0.7.0",
@@ -55,6 +56,7 @@
     "react-native-screens": "^4.10.0",
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
+    "supabase": "^2.30.4",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
