--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,9 @@
     "tsconfig.json": true,
     "nativewind-env.d.ts": true,
     "eas.json": true,
-    "babel.config.js": true
+    "babel.config.js": true,
+    "app.config.js": true,
+    ".env": true
   },
   "hide-files.files": [
     ".vscode",
@@ -25,7 +27,9 @@
     "tsconfig.json",
     "nativewind-env.d.ts",
     "eas.json",
-    "babel.config.js"
+    "babel.config.js",
+    "app.config.js",
+    ".env"
   ],
   "editor.defaultFormatter": "biomejs.biome",
   "editor.formatOnSave": true,
