--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "check:all": "bun run lint && bun run format && bun run typecheck",
     "fix:all": "bun run check:fix && bun run organize-imports",
     "reset": "bun run clean && bun install",
-    "supabase:types": "bunx supabase gen types typescript --project-id 'szwidfuttfsfauyjpfkr' --schema public > src/data/supabase/database.types.ts"
+    "supabase:types": "bunx supabase gen types typescript --project-id 'szwidfuttfsfauyjpfkr' --schema public > src/data/supabase/database.types.ts",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -64,13 +68,18 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@biomejs/biome": "^2.0.6",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/node": "^24.0.10",
     "@types/react": "~19.0.14",
+    "@vitest/ui": "^2.1.8",
     "expo-dev-client": "~5.2.4",
+    "jsdom": "^25.0.1",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^2.1.8"
   },
   "private": true
 }
