--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
       "@/*": ["src/*"],
       "@assets/*": ["assets/*"]
     },
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   },
   "include": [
     "src/**/*.ts",
