--- a/package.json
+++ b/package.json
@@ -22,16 +22,11 @@
     "fix:all": "bun run check:fix && bun run organize-imports",
     "reset": "bun run clean && bun install",
     "supabase:types": "bunx supabase gen types typescript --project-id 'szwidfuttfsfauyjpfkr' --schema public > src/data/supabase/database.types.ts",
-    "test": "vitest",
-    "test:watch": "vitest --watch",
-    "test:coverage": "vitest --coverage",
-    "test:ui": "vitest --ui",
-    "optimize-routes": "node scripts/optimize-routes.js",
-    "update-wsdot": "rm -rf node_modules/wsdot-api-client && cp -r ../wsdot-api-client node_modules/wsdot-api-client && rm -rf node_modules/wsdot-api-client/node_modules"
+    "optimize-routes": "node scripts/optimize-routes.js"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native": "^7.1.6",
     "@rn-primitives/avatar": "~1.2.0",
     "@rn-primitives/dropdown-menu": "^1.2.0",
     "@rn-primitives/portal": "~1.3.0",
@@ -39,21 +34,23 @@
     "@rn-primitives/slot": "^1.2.0",
     "@rn-primitives/tooltip": "~1.2.0",
     "@rnmapbox/maps": "^10.1.39",
-    "@supabase/supabase-js": "^2.50.3",
-    "@tanstack/query-persist-client-core": "^5.81.5",
-    "@tanstack/query-sync-storage-persister": "^5.81.5",
-    "@tanstack/react-query": "^5.81.5",
+    "@supabase/supabase-js": "^2.52.1",
+    "@tanstack/query-persist-client-core": "^5.83.0",
+    "@tanstack/query-sync-storage-persister": "^5.83.0",
+    "@tanstack/react-query": "^5.83.0",
     "@turf/turf": "^7.2.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "expo": "53.0.20",
-    "expo-linking": "~7.1.5",
-    "expo-location": "^18.1.6",
-    "expo-navigation-bar": "~4.2.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "expo": "^53.0.20",
+    "expo-constants": "~17.1.4",
+    "expo-linking": "~7.1.4",
     "expo-router": "~5.1.4",
-    "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.7",
+    "expo-system-ui": "~5.0.6",
+    "expo-web-browser": "~14.2.0",
+    "expo-location": "^18.1.6",
+    "expo-navigation-bar": "~4.2.7",
+    "expo-splash-screen": "~0.30.10",
     "lucide-react-native": "^0.511.0",
     "mapbox-gl": "^3.13.0",
     "nativewind": "^4.1.23",
@@ -64,29 +61,26 @@
     "react-native-logs": "^5.3.0",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "^4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
-    "supabase": "^2.30.4",
-    "tailwind-merge": "^2.2.1",
-    "ws-dottie": "^0.2.0",
-    "wsdot-api-client": "file:/../wsdot-api-client"
+    "supabase": "^2.31.8",
+    "tailwind-merge": "^2.6.0",
+    "ws-dottie": "^0.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@biomejs/biome": "^2.0.6",
-    "@testing-library/react": "^16.1.0",
+    "@babel/core": "^7.28.0",
+    "@biomejs/biome": "^2.1.2",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/react-hooks": "^8.0.1",
-    "@types/node": "^24.0.10",
+    "@types/node": "^24.1.0",
     "@types/react": "~19.0.14",
-    "@vitest/ui": "^2.1.8",
     "expo-dev-client": "~5.2.4",
     "jsdom": "^25.0.1",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3",
-    "vitest": "^2.1.8"
+    "typescript": "^5.8.3"
   },
   "private": true
 }
