--- a/package.json
+++ b/package.json
@@ -26,14 +26,16 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native": "^7.1.16",
+    "@react-navigation/native-stack": "^7.3.23",
+    "@react-navigation/stack": "^7.4.4",
     "@rn-primitives/avatar": "~1.2.0",
     "@rn-primitives/dropdown-menu": "^1.2.0",
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/progress": "~1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "@rn-primitives/tooltip": "~1.2.0",
-    "@rnmapbox/maps": "^10.1.39",
+    "@rnmapbox/maps": "^10.1.40",
     "@supabase/supabase-js": "^2.52.1",
     "@tanstack/query-persist-client-core": "^5.83.0",
     "@tanstack/query-sync-storage-persister": "^5.83.0",
@@ -42,15 +44,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "^53.0.20",
-    "expo-constants": "~17.1.4",
-    "expo-linking": "~7.1.4",
-    "expo-router": "~5.1.4",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.6",
-    "expo-web-browser": "~14.2.0",
+    "expo-constants": "~17.1.7",
+    "expo-linking": "~7.1.7",
     "expo-location": "^18.1.6",
     "expo-navigation-bar": "~4.2.7",
+    "expo-router": "~5.1.4",
     "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.10",
+    "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.511.0",
     "mapbox-gl": "^3.13.0",
     "nativewind": "^4.1.23",
@@ -58,6 +60,7 @@
     "react-dom": "19.0.0",
     "react-map-gl": "^8.0.4",
     "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-logs": "^5.3.0",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
@@ -66,7 +69,7 @@
     "react-native-web": "~0.20.0",
     "supabase": "^2.31.8",
     "tailwind-merge": "^2.6.0",
-    "ws-dottie": "^0.2.1"
+    "ws-dottie": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
