--- a/package.json
+++ b/package.json
@@ -21,10 +21,23 @@
     "check:all": "bun run lint && bun run format && bun run typecheck",
     "fix:all": "bun run check:fix && bun run organize-imports",
     "reset": "bun run clean && bun install",
-
-    "optimize-routes": "node scripts/optimize-routes.js"
+    "optimize-routes": "node scripts/optimize-routes.js",
+    "convex:dev": "bun x convex dev",
+    "convex:deploy": "bun x convex deploy",
+    "convex:deploy:prod": "bun x convex deploy --prod",
+    "convex:codegen": "bun x convex codegen",
+    "convex:typecheck": "bun x convex typecheck",
+    "convex:run": "bun x convex run",
+    "convex:run:prod": "bun x convex run --prod",
+    "convex:logs": "bun x convex logs",
+    "convex:logs:prod": "bun x convex logs --prod",
+    "convex:dashboard": "bun x convex dashboard",
+    "convex:auth": "bun x convex auth",
+    "convex:init": "bun x convex init",
+    "convex:dev:all": "bun run convex:dev & bun run start"
   },
   "dependencies": {
+    "@convex-dev/crons": "^0.1.9",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/native-stack": "^7.3.23",
@@ -36,7 +49,6 @@
     "@rn-primitives/slot": "^1.2.0",
     "@rn-primitives/tooltip": "~1.2.0",
     "@rnmapbox/maps": "^10.1.40",
-
     "@tanstack/query-persist-client-core": "^5.83.0",
     "@tanstack/query-sync-storage-persister": "^5.83.0",
     "@tanstack/react-query": "^5.83.0",
@@ -44,6 +56,7 @@
     "@types/three": "^0.178.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.25.4",
     "expo": "^53.0.20",
     "expo-constants": "~17.1.7",
     "expo-linking": "~7.1.7",
@@ -68,7 +81,6 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
-
     "tailwind-merge": "^2.6.0",
     "three": "^0.178.0",
     "ws-dottie": "^0.4.0"
