Enhance TypeScript configuration and logging imports for vessel functions
- Updated tsconfig.json to include additional path mappings for better module resolution.
- Refactored logging imports in vesselBasics, vesselPings, and vesselTrips actions to use a centralized logger module, improving consistency across the codebase.
- Added a new query to fetch recent vessel pings, enhancing data retrieval capabilities for recent activity.

--- a/src/data/convex/tsconfig.json
+++ b/src/data/convex/tsconfig.json
@@ -23,9 +23,13 @@
     /* Path mappings for absolute imports */
     "baseUrl": "../../..",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@assets/*": ["assets/*"],
+      "@/features/*": ["src/features/*"],
+      "@/shared/*": ["src/shared/*"],
+      "@/data/*": ["src/data/*"]
     }
   },
-  "include": ["./**/*"],
+  "include": ["./**/*", "../../../nativewind-env.d.ts"],
   "exclude": ["./_generated"]
 }
