--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@types/node": "^24.1.0",
     "@types/react": "~19.0.14",
+    "babel-plugin-react-compiler": "19.1.0-rc.2",
     "expo-dev-client": "~5.2.4",
     "jsdom": "^25.0.1",
     "tailwindcss": "3.3.5",
