--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
   },
   "dependencies": {
     "@convex-dev/crons": "^0.1.9",
+    "@gorhom/bottom-sheet": "^5",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-navigation/native": "^7.1.16",
-    "@react-navigation/native-stack": "^7.3.23",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.4.4",
     "@rn-primitives/avatar": "~1.2.0",
     "@rn-primitives/dropdown-menu": "^1.2.0",
