--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@convex-dev/crons": "^0.1.9",
     "@gorhom/bottom-sheet": "^5",
+    "@math.gl/web-mercator": "^4.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
@@ -84,6 +85,7 @@
     "react-native-web": "~0.20.0",
     "tailwind-merge": "^2.6.0",
     "three": "^0.178.0",
+    "viewport-mercator-project": "^7.0.4",
     "ws-dottie": "^0.4.0"
   },
   "devDependencies": {
