--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
+    "react-native-worklets": "^0.4.1",
     "tailwind-merge": "^2.6.0",
     "three": "^0.178.0",
     "viewport-mercator-project": "^7.0.4",
