--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "@gorhom/bottom-sheet": "^5.1.8",
     "@math.gl/web-mercator": "^4.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-navigation/native": "^7.1.17",
-    "@react-navigation/native-stack": "^7.3.24",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.4.5",
     "@rn-primitives/avatar": "~1.2.0",
     "@rn-primitives/dropdown-menu": "^1.2.0",
@@ -60,6 +60,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.25.4",
     "expo": "^53.0.20",
+    "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-linking": "~7.1.7",
     "expo-location": "^18.1.6",
@@ -76,9 +77,9 @@
     "react-dom": "19.0.0",
     "react-map-gl": "^8.0.4",
     "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.28.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-logs": "^5.3.0",
-    "react-native-reanimated": "~4.0.2",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
@@ -102,7 +103,7 @@
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.3",
-    "typescript": "^5.9.2"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
