--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "bun x expo start",
-    "web": "clear && expo start -c --web",
-    "android": "expo start -c --android",
-    "ios": "expo start -c --ios",
+    "start": "EXPO_ROUTER_APP_ROOT=src/app bun x expo start",
+    "web": "EXPO_ROUTER_APP_ROOT=src/app clear && expo start -c --web",
+    "android": "EXPO_ROUTER_APP_ROOT=src/app expo start -c --android",
+    "ios": "EXPO_ROUTER_APP_ROOT=src/app expo start -c --ios",
     "clean": "rm -rf .expo node_modules",
     "postinstall": "bun x tailwindcss -i ./src/global.css -o ./node_modules/.cache/nativewind/global.css",
     "prepare": "bun run postinstall",
@@ -60,7 +60,6 @@
     "clsx": "^2.1.1",
     "convex": "^1.25.4",
     "expo": "^53.0.20",
-    "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-linking": "~7.1.7",
     "expo-location": "^18.1.6",
@@ -86,7 +85,6 @@
     "react-native-web": "~0.20.0",
     "react-native-worklets": "^0.4.1",
     "tailwind-merge": "^2.6.0",
-    "three": "^0.178.0",
     "viewport-mercator-project": "^7.0.4",
     "ws-dottie": "^0.4.0"
   },
@@ -105,5 +103,12 @@
     "tsx": "^4.20.3",
     "typescript": "~5.8.3"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
