--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "EXPO_ROUTER_APP_ROOT=src/app bun x expo start",
-    "web": "EXPO_ROUTER_APP_ROOT=src/app clear && expo start -c --web",
-    "android": "EXPO_ROUTER_APP_ROOT=src/app expo start -c --android",
-    "ios": "EXPO_ROUTER_APP_ROOT=src/app expo start -c --ios",
+    "start": "bun x expo start",
+    "web": "clear && expo start -c --web",
+    "android": "expo start -c --android",
+    "ios": "expo start -c --ios",
     "clean": "rm -rf .expo node_modules",
     "postinstall": "bun x tailwindcss -i ./src/global.css -o ./node_modules/.cache/nativewind/global.css",
     "prepare": "bun run postinstall",
@@ -41,8 +41,8 @@
     "@gorhom/bottom-sheet": "^5.1.8",
     "@math.gl/web-mercator": "^4.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-navigation/native": "^7.1.6",
-    "@react-navigation/native-stack": "^7.3.10",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.24",
     "@react-navigation/stack": "^7.4.5",
     "@rn-primitives/avatar": "~1.2.0",
     "@rn-primitives/dropdown-menu": "^1.2.0",
@@ -76,9 +76,9 @@
     "react-dom": "19.0.0",
     "react-map-gl": "^8.0.4",
     "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-logs": "^5.3.0",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated": "~4.0.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
@@ -101,7 +101,7 @@
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.3",
-    "typescript": "~5.8.3"
+    "typescript": "^5.9.2"
   },
   "private": true,
   "expo": {
