--- a/eas.json
+++ b/eas.json
@@ -7,6 +7,7 @@
     "development": {
       "developmentClient": true,
       "distribution": "internal",
+      "installCommand": "bun install",
       "ios": {
         "resourceClass": "m-medium"
       },
@@ -16,6 +17,7 @@
     },
     "preview": {
       "distribution": "internal",
+      "installCommand": "bun install",
       "ios": {
         "resourceClass": "m-medium"
       },
@@ -24,6 +26,7 @@
       }
     },
     "production": {
+      "installCommand": "bun install",
       "ios": {
         "resourceClass": "m-medium"
       },
