Update bun.lock, eas.json, and package.json for project consistency and dependency management
- Renamed project from "ferryjoy-client-new" to "ferryjoy-client" in bun.lock.
- Updated @0no-co/graphql.web to version 1.2.0 and various @babel packages to their latest versions for improved compatibility and performance.
- Removed installCommand from eas.json to streamline configuration.
- Specified packageManager as bun@1.2.15 in package.json for clarity on package management tool.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ferryjoy-client",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "packageManager": "bun@1.2.15",
   "scripts": {
     "start": "bun x expo start",
     "web": "clear && expo start -c --web",
