--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.25.4",
     "expo": "^53.0.20",
+    "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-linking": "~7.1.7",
     "expo-location": "^18.1.6",
