--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@gorhom/bottom-sheet": "^5.1.8",
     "@math.gl/web-mercator": "^4.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/hooks": "^100.1.0",
+    "@react-native-community/netinfo": "^11.3.1",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.4.5",
