Refactor training model to solve outliers and simplify loading code.
- Introduced analyze_delays.js script to analyze vessel trip delays, identifying data quality issues with negative delays.
- Added negative_delays_complete.csv and negative_delays_data.json files to store detailed analysis results and trip data.
- Created negative_delays_report.md for summarizing findings and recommendations based on the analysis.
- Implemented a convert_to_csv.ts script for converting JSON data to CSV format, enhancing data accessibility.
- Updated package.json to include new dependencies for data processing and analysis.

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@tanstack/query-sync-storage-persister": "^5.83.1",
     "@tanstack/react-query": "^5.84.2",
     "@turf/turf": "^7.2.0",
+    "@types/bun": "^1.2.20",
     "@types/three": "^0.178.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
