Enhance vessel trip management and validation schemas for expanision of completedVesselTrips table.
- Introduced a new schema for vessel trips, improving data validation and consistency.
- Updated existing vessel trip actions and mutations to utilize the new schema, enhancing maintainability.
- Refactored imports to streamline the codebase and improve clarity in vessel trip handling.
- Consolidated validation logic for vessel trips, ensuring robust data integrity across the application.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "nativewind-env.d.ts",
-    "src/types/**/*.d.ts"
+    "src/types/**/*.d.ts",
+    "convex/functions/vesselTrips/schemas.ts"
   ]
 }
